--- a/notebooks/about_final.ipynb
+++ b/notebooks/about_final.ipynb
@@ -481,124 +481,180 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   8  256  128    8  256  512  128 4096 4096  128  512   16 1024 4096 2048 4096 4096  512    2    2    2    2    2  128  256    2   16 1024    4  512    2  128    2    8    2  128    2    2  256    2    2   32    8    2   32   16    2    2    2    2    4    2 1024    2    2  256   32    2   32    2    2  256    2    2   16   16    2  128  256    2    2  256    2 1024    2    2    2    2    2    4   16    2    4    2    2    2    2  512   64    2    2    2    8    2    2   32    2    4    2    2 \n"
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1630]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|██▏                                                                  | 1/31 [00:11<05:41, 11.37s/it]"
+      "  3%|██▏                                                                 | 1/31 [01:40<50:26, 100.88s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  16  512  256   16  512 1024  256 8192 8192  256 1024   32 2048 8192 4096 8192 8192 1024    4    4    4    4    4  256  512    4   32 2048    8 1024    4  256    4   16    4  256    4    4  512    4    4   64   16    4   64   32    4    4    4    4    8    4 2048    4    4  512   64    4   64    4    4  512    4    4   32   32    4  256  512    4    4  512    4 2048    4    4    4    4    4    8   32    4    8    4    4    4    4 1024  128    4    4    4   16    4    4   64    4    8    4    4 \n"
+      "[11, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1345, 274]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|████▍                                                                | 2/31 [00:23<05:45, 11.91s/it]"
+      "  6%|████▍                                                                | 2/31 [03:00<42:37, 88.19s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  32 1024  512   32 1024 1024  512 4096  128  512   32   64  512    4   64 2048 8192   32    8    8    8    8    8  512 1024    8   64 2048   16    8    8  512    8   32    8  512    8    8 1024    8    8  128   32    8  128   64    8    8    8    8   16    8  512    8    8 1024  128    8  128    8    8 1024    8    8   64   64    8  512 1024    8    8 1024    8   64    8    8    8    8    8   16   64    8   16    8    8    8    8 2048  256    8    8    8   32    8    8  128    8   16    8    8 \n"
+      "[5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1078, 272, 275]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|██████▋                                                              | 3/31 [00:40<06:40, 14.29s/it]"
+      " 10%|██████▋                                                              | 3/31 [04:26<40:48, 87.46s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  64  256 1024   64    2 1024  128 4096  256    2   64  128  512    8  128 1024 8192   64   16   16   16   16   16    2   64   16  128 2048   32   16   16    2   16   64   16   32   16   16   64   16   16  256   64   16  256  128   16   16   16   16   32   16  512   16   16    2  256   16  256   16   16   32   16   16  128  128   16    4  128   16   16    2   16  128   16   16   16   16   16   32  128   16   32   16   16   16   16  256  512   16   16   16   64   16   16  256   16   32   16   16 \n"
+      "[19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 819, 264, 274, 254]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|████████▉                                                            | 4/31 [02:21<21:43, 48.26s/it]"
+      " 13%|████████▉                                                            | 4/31 [06:07<41:46, 92.84s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 128  512  128  128    4  512  256 4096  512    4  128  256  256   16  256 1024 1000000000  128   32   32   32   32   32    4  128   32  256 2048   64   32   32    4   32  128   32   64   32   32  128   32   32  512  128   32  512  256   32   32   32   32   64   32  512   32   32    4  512   32    2   32   32   64   32   32  256  256   32    8  256   32   32    4   32  256   32   32   32   32   32   64  256   32   64   32   32   32   32  512    8   32   32   32  128   32   32  512   32   64   32   32 \n"
+      "[18, 0, 0, 0, 0, 0, 0, 0, 0, 584, 258, 272, 253, 245]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 16%|███████████▏                                                         | 5/31 [03:14<21:46, 50.27s/it]"
+      " 16%|███████████▏                                                         | 5/31 [07:23<37:31, 86.60s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 256  256  256  256    8  512  128 2048  128    8  256   32  512   32  512 1024 8192  256   64   64   64   64   64    8  256   64  512 2048  128   64   64    8   64  256   64  128   64   64  256   64   64    2  256   64    2  512   64   64   64   64  128   64  512   64   64    8    4   64    4   64   64  128   64   64    8    2   64   16  512   64   64    8   64  512   64   64   64   64   64  128  512   64  128   64   64   64   64 1024   16   64   64   64  256   64   64 1024   64  128   64   64 \n"
+      "[20, 0, 0, 0, 0, 0, 0, 0, 365, 251, 272, 252, 244, 226]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 19%|█████████████▎                                                       | 6/31 [04:02<20:37, 49.51s/it]"
+      " 19%|█████████████▎                                                       | 6/31 [09:05<38:13, 91.74s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 512  512  512  512   16 1024  256 2048  256   16  512   64  256   64    8 1024 8192  512  128  128  128  128  128   16  512  128   32 2048  256  128  128   16  128  512  128  256  128  128  512  128  128    4  512  128    4    2  128  128  128  128  256  128  512  128  128   16    8  128    8  128  128  256  128  128   16    4  128   32  128  128  128   16  128   64  128  128  128  128  128  256    8  128  256  128  128  128  128  256   32  128  128  128  512  128  128    2  128  256  128  128 \n"
+      "[20, 0, 0, 0, 0, 0, 0, 178, 235, 269, 248, 243, 223, 214]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 23%|███████████████▌                                                     | 7/31 [04:40<18:16, 45.67s/it]"
+      " 23%|███████████████▌                                                     | 7/31 [09:21<26:49, 67.06s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   4  256  128    2   32 1024  512 2048  512   32    8  128  512  128   16 1024 8192   32  256  256  256  256  256   32   64  256   64 2048  512  256  256   32  256    2  256  512  256  256   64  256  256    8    2  256    8    4  256  256  256  256  512  256  512  256  256   32   16  256   16  256  256   16  256  256   32    8  256   64  256  256  256   32  256  128  256  256  256  256  256  512   16  256  512  256  256  256  256  512   64  256  256  256    2  256  256    4  256  512  256  256 \n"
+      "[10, 0, 0, 0, 0, 0, 43, 221, 265, 246, 242, 223, 214, 166]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 26%|█████████████████▊                                                   | 8/31 [05:08<15:17, 39.91s/it]"
+      " 26%|█████████████████▊                                                   | 8/31 [10:28<25:44, 67.16s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   8  512  256    4   64 1024  128 2048  128   64   16  256 1024  256   32 2048 8192   64  512  512  512  512  512   64  128  512   16 2048    8  512  512   64  512    4  512   32  512  512  128  512  512   16    4  512   16    8  512  512  512  512    2  512  512  512  512   64   32  512   32  512  512   32  512  512   64   16  512  128  512  512  512   64  512  256  512  512  512  512  512    2   32  512    2  512  512  512  512 1024  128  512  512  512    4  512  512    8  512 1024  512  512 \n"
+      "[12, 0, 0, 0, 0, 0, 81, 259, 243, 239, 223, 213, 165, 195]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|████████████████████                                                 | 9/31 [12:09<28:31, 77.80s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 0, 0, 0, 0, 0, 99, 239, 234, 222, 212, 165, 195, 255]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 32%|█████████████████████▉                                              | 10/31 [12:42<22:21, 63.89s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 0, 0, 0, 0, 0, 95, 229, 217, 207, 165, 194, 254, 254]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|████████████████████████▏                                           | 11/31 [13:52<21:51, 65.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18, 0, 0, 0, 0, 0, 112, 209, 204, 160, 192, 253, 252, 230]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|██████████████████████████▎                                         | 12/31 [14:14<16:33, 52.30s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 0, 0, 0, 0, 0, 132, 199, 156, 191, 252, 252, 230, 213]\n"
      ]
     }
    ],
    "source": [
-    "num_vehicles = 5\n",
+    "num_vehicles = 6\n",
     "num_terminals = cash.shape[0]\n",
     "time_until_force = [config['max_not_service_days'] - 1 for i in range(num_terminals)]\n",
     "cur_cash = np.zeros(num_terminals)\n",
@@ -611,23 +667,28 @@
     "for day in tqdm(range(days)):\n",
     "    mask = []\n",
     "    cost = []\n",
+    "    to_counter = [0 for i in range(14)]\n",
     "    for i in range(num_terminals):\n",
     "        current_money = cur_cash[i]\n",
     "        force = time_until_force[i]\n",
-    "        for forecast in range(force):\n",
-    "            if current_money > config['max_terminal_money']:\n",
-    "                force = forecast\n",
-    "                break\n",
-    "            if not forecast:\n",
-    "                current_money += cash[i][day + forecast]\n",
-    "            else:\n",
-    "                current_money += cash[i][day + forecast] # check later\n",
+    "        if cur_cash[i] > config['max_terminal_money']:\n",
+    "            force = 0\n",
+    "        # for forecast in range(force):\n",
+    "        #     if current_money > config['max_terminal_money']:\n",
+    "        #         force = forecast\n",
+    "        #         break\n",
+    "        #     if not forecast:\n",
+    "        #         current_money += cash[i][day + forecast]\n",
+    "        #     else:\n",
+    "        #         current_money += cash[i][day + forecast] # check later\n",
     "        mask.append(1)\n",
+    "        to_counter[force] += 1\n",
     "        cost.append(int(get_cost(force)))\n",
     "    \n",
-    "    for i in range(100):\n",
-    "        print(\" \" * (4 - len(str(cost[i]))) + str(cost[i]), end=' ')\n",
-    "    print()\n",
+    "    print(to_counter)\n",
+    "    # # for i in range(100):\n",
+    "    # #     print(\" \" * (4 - len(str(cost[i]))) + str(cost[i]), end=' ')\n",
+    "    # # print()\n",
     "    # print(\" \"cost[:100])\n",
     "    \n",
     "    visited, paths = myvrp.find_vrp(cost, mask)\n",
