--- a/notebooks/about_final-sergey.ipynb
+++ b/notebooks/about_final-sergey.ipynb
@@ -410,19 +410,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "4867672a-c250-4811-923e-d7450aab051c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cash = (data[data.columns[1:]].values * (1 + 0.2 * (random.random() - 0.5))).copy()\n",
-    "real_cash = data[data.columns[1:]].values.copy()\n",
+    "real_cash = (data[data.columns[1:]].values * (1 + 0.2 * (random.random() - 0.5))).copy()\n",
+    "# real_cash = data[data.columns[1:]].values.copy()\n",
     "cash = real_cash.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "cc84e1b6-9d29-449e-a182-3644b8aa3a20",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
        "(1630, 92)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "0d9cb595-971e-4bdc-ae18-19ed9d9222f9",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "c9698d8b-baec-49af-9566-2c5d717826ed",
    "metadata": {},
    "outputs": [],
@@ -464,468 +464,71 @@
     "    # return 2 ** (config['max_not_service_days'] - days_left)\n",
     "    l = 10000 / (2 ** days_left)\n",
     "    # return 1 if days_left > 2 else l\n",
-    "    return 100 * l if days_left == big_id and days_left > 5 else l"
+    "    return 256 * l if days_left == big_id and days_left > 7 else l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "61f55fb3-2e68-4cf1-a344-2d2d429c740c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                          | 0/31 [00:00<?, ?it/s]"
+      "  0%|                                                                                                          | 0/90 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 11, 7, 25, 35, 37, 48, 66, 64, 62, 80, 100, 73, 1022]\n"
+      "[10, 7, 21, 35, 36, 42, 62, 63, 61, 76, 92, 79, 81, 79, 886]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|███▏                                                                                              | 1/31 [00:05<02:36,  5.23s/it]"
+      "  1%|█                                                                                                 | 1/90 [00:07<10:24,  7.02s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11, 7, 25, 35, 37, 48, 66, 64, 62, 80, 100, 73, 1022, 0]\n"
+      "[0, 2, 1, 8, 42, 72, 74, 75, 86, 105, 90, 88, 87, 887, 13]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|██████▎                                                                                           | 2/31 [00:10<02:25,  5.03s/it]"
+      "  2%|██▏                                                                                               | 2/90 [00:23<18:13, 12.42s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 1, 12, 56, 75, 75, 78, 91, 113, 84, 1026, 9, 8]\n"
+      "[0, 2, 1, 2, 73, 78, 81, 91, 107, 94, 92, 91, 782, 21, 115]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█████████▍                                                                                        | 3/31 [00:34<06:25, 13.78s/it]"
+      "  3%|███▎                                                                                              | 3/90 [00:40<20:57, 14.45s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 1, 4, 84, 81, 83, 96, 115, 89, 945, 16, 16, 98]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 13%|████████████▋                                                                                     | 4/31 [00:53<07:07, 15.82s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 2, 84, 79, 83, 98, 115, 88, 745, 18, 16, 102, 198]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 16%|███████████████▊                                                                                  | 5/31 [01:14<07:44, 17.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 2, 81, 80, 83, 98, 115, 89, 548, 19, 18, 104, 200, 193]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 19%|██████████████████▉                                                                               | 6/31 [01:43<08:55, 21.43s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 80, 81, 81, 98, 114, 90, 364, 19, 18, 105, 202, 193, 185]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 23%|██████████████████████▏                                                                           | 7/31 [02:15<09:59, 24.96s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[75, 79, 81, 98, 114, 91, 192, 19, 18, 105, 205, 195, 187, 171]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 26%|█████████████████████████▎                                                                        | 8/31 [02:26<07:51, 20.50s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[76, 80, 97, 115, 100, 147, 24, 23, 108, 210, 197, 194, 179, 80]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 29%|████████████████████████████▍                                                                     | 9/31 [02:59<08:56, 24.40s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[26, 96, 115, 102, 147, 26, 37, 124, 224, 206, 203, 187, 89, 48]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 32%|███████████████████████████████▎                                                                 | 10/31 [03:05<06:37, 18.94s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[15, 106, 100, 148, 27, 36, 126, 235, 216, 207, 193, 96, 58, 67]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|██████████████████████████████████▍                                                              | 11/31 [03:18<05:38, 16.90s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[12, 89, 146, 27, 36, 126, 236, 220, 212, 200, 107, 66, 72, 81]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 39%|█████████████████████████████████████▌                                                           | 12/31 [03:34<05:15, 16.62s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 136, 26, 38, 128, 244, 222, 212, 200, 112, 78, 80, 85, 69]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 42%|████████████████████████████████████████▋                                                        | 13/31 [03:55<05:24, 18.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[16, 18, 37, 126, 245, 230, 212, 202, 111, 78, 81, 86, 73, 115]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 45%|███████████████████████████████████████████▊                                                     | 14/31 [04:00<04:00, 14.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 99, 245, 232, 214, 217, 117, 84, 82, 89, 78, 128, 44]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 48%|██████████████████████████████████████████████▉                                                  | 15/31 [04:09<03:22, 12.68s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 0, 164, 231, 217, 219, 122, 91, 83, 92, 80, 130, 47, 153]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 52%|██████████████████████████████████████████████████                                               | 16/31 [04:24<03:17, 13.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 11, 224, 217, 221, 127, 92, 91, 101, 86, 133, 47, 156, 124]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 55%|█████████████████████████████████████████████████████▏                                           | 17/31 [04:48<03:50, 16.45s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 63, 213, 221, 129, 97, 94, 103, 90, 137, 47, 157, 125, 154]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 58%|████████████████████████████████████████████████████████▎                                        | 18/31 [05:15<04:16, 19.72s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 127, 217, 131, 99, 98, 103, 94, 144, 54, 163, 128, 155, 117]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 61%|███████████████████████████████████████████████████████████▍                                     | 19/31 [05:25<03:19, 16.66s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 179, 131, 99, 98, 103, 96, 144, 57, 168, 137, 161, 121, 136]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 65%|██████████████████████████████████████████████████████████████▌                                  | 20/31 [05:34<02:40, 14.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[16, 127, 99, 97, 103, 99, 154, 58, 170, 140, 162, 126, 136, 143]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 68%|█████████████████████████████████████████████████████████████████▋                               | 21/31 [05:43<02:07, 12.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[24, 89, 96, 105, 103, 157, 62, 177, 142, 171, 131, 145, 154, 74]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 71%|████████████████████████████████████████████████████████████████████▊                            | 22/31 [05:51<01:41, 11.31s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 84, 103, 103, 160, 65, 179, 147, 178, 137, 154, 162, 82, 73]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 74%|███████████████████████████████████████████████████████████████████████▉                         | 23/31 [06:11<01:51, 13.96s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 77, 104, 160, 65, 186, 147, 183, 146, 157, 167, 92, 78, 68]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 77%|███████████████████████████████████████████████████████████████████████████                      | 24/31 [06:35<01:58, 16.99s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 55, 156, 68, 188, 150, 183, 149, 169, 172, 94, 83, 72, 91]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 81%|██████████████████████████████████████████████████████████████████████████████▏                  | 25/31 [07:00<01:56, 19.43s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 70, 65, 188, 152, 186, 157, 171, 179, 100, 89, 79, 96, 98]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 84%|█████████████████████████████████████████████████████████████████████████████████▎               | 26/31 [07:17<01:33, 18.62s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 30, 184, 154, 186, 160, 176, 181, 103, 91, 81, 100, 105, 79]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 87%|████████████████████████████████████████████████████████████████████████████████████▍            | 27/31 [07:26<01:02, 15.60s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 73, 154, 186, 161, 178, 183, 109, 95, 85, 102, 105, 80, 118]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|███████████████████████████████████████████████████████████████████████████████████████▌         | 28/31 [07:33<00:39, 13.28s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 63, 182, 161, 181, 187, 111, 99, 88, 107, 112, 83, 121, 134]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 94%|██████████████████████████████████████████████████████████████████████████████████████████▋      | 29/31 [07:52<00:29, 14.99s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 70, 162, 182, 187, 113, 100, 94, 108, 115, 88, 124, 137, 150]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 97%|█████████████████████████████████████████████████████████████████████████████████████████████▊   | 30/31 [08:07<00:14, 14.83s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 62, 182, 187, 115, 105, 100, 117, 122, 94, 133, 144, 154, 115]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████| 31/31 [08:17<00:00, 16.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1230741.2054794522\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "[1, 1, 2, 53, 77, 85, 94, 111, 95, 92, 92, 601, 23, 118, 185]\n"
      ]
     }
    ],
@@ -942,17 +545,17 @@
     "\n",
     "myvrp = vrpp.VRPP(dist, 10, 10 * 60, num_vehicles, solution_limit=100, time_limit=100, dead_loss=False)\n",
     "\n",
-    "days = 31\n",
+    "days = 90\n",
     "big_id = config['max_not_service_days']\n",
     "for day in tqdm(range(days)):\n",
     "    mask = []\n",
     "    cost = []\n",
-    "    to_counter = [0 for i in range(config['max_not_service_days'])]\n",
+    "    to_counter = [0 for i in range(config['max_not_service_days'] + 1)]\n",
     "    \n",
     "    for i in range(num_terminals):\n",
     "        current_money = cur_cash[i]\n",
     "        force = time_until_force[i]\n",
-    "        for forecast in range(force):\n",
+    "        for forecast in range(min(force, days - day)):\n",
     "            if current_money > config['max_terminal_money']:\n",
     "                force = forecast\n",
     "                break\n",
@@ -985,12 +588,11 @@
     "        if visited[i]:\n",
     "            cur_loss += max(config['terminal_service_cost'], cur_cash[i] * config['terminal_service_persent'])\n",
     "            cur_cash[i] = 0\n",
-    "            time_until_force[i] = config['max_not_service_days'] + 1\n",
-    "\n",
-    "\n",
-    "        time_until_force[i] -= 1 \n",
+    "            time_until_force[i] = config['max_not_service_days']\n",
+    "        else:\n",
+    "            time_until_force[i] -= 1 \n",
     "        cur_loss += cur_cash[i] * config['persent_day_income']\n",
-    "        cur_cash[i] += real_cash[i][day]\n",
+    "        cur_cash[i] += cash[i][day]\n",
     "    \n",
     "    if bad:\n",
     "        break\n",
