--- a/notebooks/demand_prediction.ipynb
+++ b/notebooks/demand_prediction.ipynb
@@ -5947,8 +5947,8 @@
           1
          ],
          "range": [
-          54.31759408760139,
-          56.898671382398604
+          54.317348365822205,
+          56.89891710417779
          ],
          "title": {
           "text": "latitude"
@@ -7525,6 +7525,27 @@
     "    denom = np.abs(preds)+np.abs(target)\n",
     "    smape_val = (200*np.sum(num/denom))/n\n",
     "    return smape_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0290518a-55ac-4625-9b5f-c50cf6a4c9d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_cols = ['tid']\n",
+    "\n",
+    "params_cat = {'n_estimators' : 1000,\n",
+    "              'learning_rate': .03,\n",
+    "              'depth' : 4,\n",
+    "              'use_best_model': True,\n",
+    "              'cat_features' : cat_cols,\n",
+    "              'l2_leaf_reg' : 1,\n",
+    "              'random_state': 42,\n",
+    "              'eval_metric' : 'MAE'}\n",
+    "\n",
+    "cat_model = CatBoostRegressor(**params_cat)"
    ]
   },
   {
