--- a/notebooks/income_experiments.ipynb
+++ b/notebooks/income_experiments.ipynb
@@ -2949,7 +2949,13 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "013bc4f9",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
