--- a/notebooks/about_final.ipynb
+++ b/notebooks/about_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "beafae4e-8537-41d9-8673-ce954b195191",
    "metadata": {},
    "outputs": [],
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d6f49282-c0e0-4b9b-8d8b-712a429e76e8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'vrpp' from '/Users/sergak/Documents/Neyro_sets/optimal_encashement/notebooks/../src/vrpp.py'>"
+       "<module 'vrpp' from '/Users/sergak/PycharmProjects/optimal_encashement/notebooks/../src/vrpp.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "4ae03afa-ad30-42a9-9a0f-dd9e01deb68a",
    "metadata": {},
    "outputs": [],
@@ -1893,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "33e04e6b-0723-48c9-bbf5-be9695664b04",
    "metadata": {},
    "outputs": [
@@ -1901,18 +1901,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cz/4mm9fww57k9fxrmn10mvt2_h0000gn/T/ipykernel_2543/3009002609.py:6: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/var/folders/cz/4mm9fww57k9fxrmn10mvt2_h0000gn/T/ipykernel_13036/322514209.py:6: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  data['logs'][i][k] = np.array(v)\n"
      ]
     }
    ],
    "source": [
-    "with open('../data/processed/raw_report_4.json', 'r') as f:\n",
+    "with open('../data/processed/raw_report_4_dp.json', 'r') as f:\n",
     "    data = json.load(f)\n",
     "    for i in range(len(data['logs'])):\n",
     "        for k, v in data['logs'][i].items():\n",
     "            if type(v) == list:\n",
     "                data['logs'][i][k] = np.array(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "42bfbbaa-e733-40b1-b36a-0900463208fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10910657.676712325"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([el['losses'] for el in data['logs']])"
    ]
   },
   {
