speaking of which

--- a/notebooks/about_final.ipynb
+++ b/notebooks/about_final.ipynb
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "4ae03afa-ad30-42a9-9a0f-dd9e01deb68a",
    "metadata": {},
    "outputs": [],
@@ -1893,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "33e04e6b-0723-48c9-bbf5-be9695664b04",
    "metadata": {},
    "outputs": [
@@ -1917,17 +1917,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "42bfbbaa-e733-40b1-b36a-0900463208fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10910657.676712325"
+       "10910242.376712326"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1935,6 +1935,114 @@
    "source": [
     "sum([el['losses'] for el in data['logs']])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a972605c-b372-40f7-8d20-159647523e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1630"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(data['logs'][0]['dp'] == 50).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "99accf5f-9310-4779-93b2-cd8c288d0786",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3597489.794520548"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([el['losses'] for el in data['logs'][:30]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b932e8d7-5508-4820-9e65-e053d357a151",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-172.14794520661235"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([el['losses'] for el in data['logs'][:50]]) - 5994289"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3d073316-c8f9-4b2e-b2a2-409e023b0ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 181),\n",
+       " (6, 160),\n",
+       " (5, 157),\n",
+       " (7, 153),\n",
+       " (8, 150),\n",
+       " (14, 131),\n",
+       " (9, 130),\n",
+       " (10, 124),\n",
+       " (11, 115),\n",
+       " (12, 92),\n",
+       " (13, 79),\n",
+       " (3, 63),\n",
+       " (1, 49),\n",
+       " (2, 43),\n",
+       " (0, 3)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "\n",
+    "collections.Counter(data['logs'][12]['days_until_death']).most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc422910-3ba2-4f96-97bb-b753e9b7612d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
